[project]
name = "image-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "numpy<2",
    "openai-clip>=1.0.1",
    "pillow>=11.2.1",
    "sentence-transformers>=4.1.0",
    "setuptools>=80.9.0",
    "sqlite-vec>=0.1.6",
    "torch==2.2.0",
    "torchvision>=0.17.0",
    "transformers>=4.53.0",
]
